:bug: :building_construction: :memo: Unmazedboot Alpine fix
Alpine needs the SSL certs from JVM when running with custom
JVM itself.
https://stackoverflow.com/questions/53246399/jdk8-jdk10-pkix-path-building-failed-suncertpathbuilderexception-unable-to/53246850#53246850

Adding notes to README with the documentation about problems and
how to run the service.

Adding new token for Google Maps API following the error message

```
$ curl -i localhost:8082/distancematrix -H 'content-type: application/json' -d '{ "originAddress": "Maceio, Alagoas, Brazil", "destinationAddress": "Recife, Pernambuco, Brazil" }'
HTTP/1.1 200
Content-Type: application/json;charset=UTF-8
Transfer-Encoding: chunked
Date: Sun, 01 Nov 2020 14:23:56 GMT

{"description":"You must enable Billing on the Google Cloud Project at https://console.cloud.google.com/project/_/billing/enable Learn more at https://developers.google.com/maps/gmp-get-started","error":500}%
```